# improved-stremio-shell

./: .gitignore  README.md  bundle.ps1  bundle.sh  meson.build  setup.iss  stremio.pro
.github/workflows/: build.yml
mac/: Info.plist  dependencies.sh  dmg.json
src/: main.cpp  main.h  main.qml  mpv.cpp  mpv.h  mpv_qthelper.h  qml.qrc  stremioprocess.cpp  stremioprocess.h  systemtray.cpp  systemtray.h
windows/: dependencies.ps1  env.ps1
